--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Name: Rheanbelle Agrimano 
-Address: 9025 Paradahan 2, Tanza, Cavite 
-Birthday: May 30, 2002 
+Name: Rheanbelle Agrimano <br>
+Address: 9025 Paradahan 2, Tanza, Cavite <br>
+Birthday: May 30, 2002 <br>
 Contact No.: 09272274170
