--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
+<html>
+<header>
+<h1> About Me <h1>
+</header>
+
+<body bgcolor=#ccccff>
 Name: Rheanbelle Agrimano <br>
 Address: 9025 Paradahan 2, Tanza, Cavite <br>
 Birthday: May 30, 2002 <br>
 Contact No.: 09272274170
+
+</body>
+</html>
