--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@ Contact No.: 09272274170
 </body>
 </html> 
   
-  <a href="page1.html">page1</a>
+  <a href="page1.html">Favorites</a>
+<a href="activity4.html">Buttons</a>
