--- a/index.html
+++ b/index.html
@@ -14,3 +14,4 @@ Contact No.: 09272274170
   
   <a href="page1.html">Favorites</a>
 <a href="activity4.html">Buttons</a>
+  <a href="activity5.html">Class Schedule</a>
